force-app/main/default/objects/GiftAid_Settings__mdt/GiftAid_Settings__mdt.object-meta.xml
<CustomObject>
    <description>This metadata is used for storing the configuration for your giftAid setup</description>
    <label>GiftAid Settings</label>
    <pluralLabel>GiftAid Settings</pluralLabel>
</CustomObject>