force-app/main/default/objects/GiftAid_Settings__mdt/fields/Contact_Object__c.field-meta.xml
<CustomField>
    <fullName>Contact_Object__c</fullName>
    <inlineHelpText>Please provide which object you are storing the Contact details in, this could be Account or Contact or a custom Object</inlineHelpText>
    <label>Contact Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>GiftAid_Settings_Contact</relationshipLabel>
    <relationshipName>GiftAid_Settings_Contact</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>