force-app/main/default/objects/GiftAid_Settings__mdt/fields/Contact_Tax_Active_Field__c.field-meta.xml
<CustomField>
    <fullName>Contact_Tax_Active_Field__c</fullName>
    <inlineHelpText>Provide the field that is used as a flag for confirming that the contact is an active tax payer</inlineHelpText>
    <label>Contact Tax Active Field</label>
    <metadataRelationshipControllingField>GiftAid_Settings__mdt.Contact_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>GiftAid_Settings_Contact_Tax_Payer</relationshipLabel>
    <relationshipName>GiftAid_Settings_Contact_Tax_Payer</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>