force-app/main/default/objects/GiftAid_Settings__mdt/fields/Donation_Contact_Field__c.field-meta.xml
<CustomField>
    <fullName>Donation_Contact_Field__c</fullName>
    <inlineHelpText>Please provide the field that you are using to store the Contact / Donor link within. This can be either an Account or a Contact but must match the ObjectType that you specify within the Contact Object</inlineHelpText>
    <label>Donation Contact Field</label>
    <metadataRelationshipControllingField>GiftAid_Settings__mdt.Donation_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>GiftAid_Settings_Donation_Contact</relationshipLabel>
    <relationshipName>GiftAid_Settings_Donation_Contact</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>