force-app/main/default/objects/GiftAid_Settings__mdt/fields/Donation_Gift_Aid_Claim_Field__c.field-meta.xml
<CustomField>
    <fullName>Donation_Gift_Aid_Claim_Field__c</fullName>
    <inlineHelpText>This is the field on the Donation object that you have created for linking the donation record to a Gift Aid Claim</inlineHelpText>
    <label>Donation Gift Aid Claim Field</label>
    <metadataRelationshipControllingField>GiftAid_Settings__mdt.Donation_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>GiftAid_Settings_Claim_Field</relationshipLabel>
    <relationshipName>GiftAid_Settings_Claim_Field</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>