force-app/main/default/objects/GiftAid_Settings__mdt/fields/Donation_Gift_Aid_Source__c.field-meta.xml
<CustomField>
    <fullName>Donation_Gift_Aid_Source__c</fullName>
    <inlineHelpText>Provide the field that you have configured for storing the source of the donation against on the Donation record</inlineHelpText>
    <label>Donation Gift Aid Source</label>
    <metadataRelationshipControllingField>GiftAid_Settings__mdt.Donation_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>GiftAid_Settings_Donation_Source</relationshipLabel>
    <relationshipName>GiftAid_Settings_Donation_Source</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>