force-app/main/default/objects/GiftAid_Settings__mdt/fields/Donation_Gift_Aid_Status_Field__c.field-meta.xml
<CustomField>
    <fullName>Donation_Gift_Aid_Status_Field__c</fullName>
    <inlineHelpText>Populate this field with the formula field you created for confirm what the status of linked gift aid claim is</inlineHelpText>
    <label>Donation Gift Aid Status Field</label>
    <metadataRelationshipControllingField>GiftAid_Settings__mdt.Donation_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>GiftAid_Settings_Gift_Aid_Status</relationshipLabel>
    <relationshipName>GiftAid_Settings_Gift_Aid_Status</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>