force-app/main/default/objects/GiftAid_Settings__mdt/fields/Donation_Gift_Declaration_Field__c.field-meta.xml
<CustomField>
    <fullName>Donation_Gift_Declaration_Field__c</fullName>
    <inlineHelpText>This is the field that we are using on the Donation to link the Gift Aid Declaration for the Contact to</inlineHelpText>
    <label>Donation Gift Declaration Field</label>
    <metadataRelationshipControllingField>GiftAid_Settings__mdt.Donation_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>GiftAid_Settings_Donation_Declaration</relationshipLabel>
    <relationshipName>GiftAid_Settings_Donation_Declaration</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>