force-app/main/default/objects/GiftAid_Settings__mdt/fields/Donation_GiftAidable_Field__c.field-meta.xml
<CustomField>
    <fullName>Donation_GiftAidable_Field__c</fullName>
    <inlineHelpText>Please provide the field that is used as a means of confirm that the record being process is valid to have gift aid claimed against it.</inlineHelpText>
    <label>Donation GiftAidable Field</label>
    <metadataRelationshipControllingField>GiftAid_Settings__mdt.Donation_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>GiftAid_Settings_Donation_Giftaidable</relationshipLabel>
    <relationshipName>GiftAid_Settings_Donation_Giftaidable</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>