force-app/main/default/objects/GiftAid_Settings__mdt/fields/Donation_Object__c.field-meta.xml
<CustomField>
    <fullName>Donation_Object__c</fullName>
    <inlineHelpText>Please provide the object that you are using for storing your Donations in.</inlineHelpText>
    <label>Donation Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>GiftAid_Settings_Donation</relationshipLabel>
    <relationshipName>GiftAid_Settings_Donation</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>